Fix site navbar border in dark mode

--- a/site/custom.css
+++ b/site/custom.css
@@ -73,6 +73,7 @@ h2 > a:hover {
 
   .navbar {
     background-color: var(--darkest-bg);
+  border-bottom: solid 1px #f8fafc0f;
   }
 }
 
